--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@ crossorigin=""/>
 <!-- Make sure you put this AFTER Leaflet's CSS -->
 <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
 integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
-crossorigin=""></script>
+crossorigin="">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
+</script>
 
 </head>
 <body>
     <div id = "map"></div>
 
-    <div id = "title">Analiza Borów Tucholskich</div>
+    <!--<div id = "title">Analiza Borów Tucholskich</div>-->
 
 
     <script src="script.js"></script>
