--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ crossorigin="">
 <body>
     <div id = "map"></div>
 
-    <div id = "title">Analiza Borów Tucholskich</div>
+    <div id = "title">Analiza Borów Tucholskich</div> <!--dsuyfg-->
 
 
     <script src="script.js"></script>
