--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
     crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
+    <script src="geojson/lossyear.geojson" type="text/javascript" ></script>
 </head>
 <body>
     <div id = "map"></div>
@@ -38,5 +41,6 @@
     </div>
 
     <script src="script.js"></script>
+    
 </body>
 </html>
