--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
     <div id = "title">Analiza wylesienia Borów Tucholskich w latach 2001-2020</div> 
 
+    <div>
+      <button class="button1">1</button>
+      <button class="button2">2</button>
+
+    </div>
+
     <div class="container">
   
       <div class="range-slider">
@@ -38,10 +44,6 @@
         <span>2001</span><span>2020</span>
       
       </div> 
-      <div id="button"><button class="button">1</button>
-        <button class="button">1 </button>
-
-      </div>
 
 
     <script src="script.js"></script>
