--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
-    <script src="geojson/lossyear.geojson" type="text/javascript" ></script>
+    <!--<script src="geojson/lossyear.geojson" type="text/javascript" ></script>-->
+    <script src="geojson/gain.geojson" type="text/javascript" ></script>
 </head>
 <body>
     <div id = "map"></div>
