dodanie pozostałych warstw

--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 
     <div id = "title">Analiza wylesienia Borów Tucholskich w latach 2001-2020</div> 
 
-
     <div class="container">
   
       <div class="range-slider">
@@ -93,6 +92,7 @@
 
 
     <script src="script.js"></script>
+    <script src="L.TileLayer.BetterWMS.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="jquery-sidebar.js"></script>
     <script src="leaflet-sidebar.js"></script>
