--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Analiza wylesienia Borów Tucholskich</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="gmaps-sidebar.css" />
@@ -18,6 +24,7 @@
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
     crossorigin=""></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
     <!--<script src="geojson/lossyear.geojson" type="text/javascript" ></script>-->
@@ -28,14 +35,14 @@
     <!-- Nav tabs -->
     <div class="sidebar-tabs">
         <ul role="tablist">
-            <li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-            <li><a href="#dane" role="tab"><img class = "ikonka" src="png/statistic.png" width = "25px" height = "25px"></img></a></li>
-            <li><a href="#granice" role="tab"><img class = "ikonka" src="png/forest-map.png" width = "25px" height = "25px"></img></a></li>
-            <li><a href="#pokrycie" role="tab"><img class = "ikonka" src="png/nature.png" width = "25px" height = "25px"></img></a></li>
-            <li><a href="#wylesienie" role="tab"><img class = "ikonka" src="png/005-deforestation-3.png" width = "25px" height = "25px"></img></a></li>
+            <li><a class = "ikona_tab" href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
+            <li id = "warstwa_dane" class = "ikona_tab" ><a  href="#dane" role="tab"><img class = "ikonka" src="png/statistic.png" width = "25px" height = "25px"></img></a></li>
+            <li id = "warstwa_granice" class = "ikona_tab" ><a  href="#granice" role="tab"><img class = "ikonka" src="png/forest-map.png" width = "25px" height = "25px"></img></a></li>
+            <li class = "ikona_tab"><a href="#pokrycie" role="tab"><img class = "ikonka" src="png/nature.png" width = "25px" height = "25px"></img></a></li>
+            <li id = "warstwa_wylesienie" class = "ikona_tab"><a href="#wylesienie" role="tab"><img class = "ikonka" src="png/005-deforestation-3.png" width = "25px" height = "25px"></img></a></li>
             <!--<li class="disabled"><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>-->
-            <li><a href="#przyrost" role="tab"><img class = "ikonka" src="png/009-replant.png" width = "25px" height = "25px"></img></a></li>
-            <li><a href="#tornado" role="tab"><img class = "ikonka" src="png/007-cold.png"  width = "25px" height = "25px"></img></a></li>
+            <li id = "warstwa_przyrost" class = "ikona_tab"><a  href="#przyrost" role="tab"><img class = "ikonka" src="png/009-replant.png" width = "25px" height = "25px"></img></a></li>
+            <li id = "warstwa_tornado" class = "ikona_tab"><a  href="#tornado" role="tab"><img class = "ikonka" src="png/007-cold.png"  width = "25px" height = "25px"></img></a></li>
         </ul>
 
         <ul role="tablist">
@@ -68,14 +75,35 @@
 
         <div class="sidebar-pane" id="pokrycie">
             <h1 class="sidebar-header">Pokrycie<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <div class="item">
+                <div class="toggle-rect-color">
+                  <input type="checkbox" class = "checkbox_granica" id="check_1" name="check">
+                  <label for="check_1"></label>
+                  <label id = "checkbox-text" for="check_1">Granica Borów Tucholskich</label>
+                </div>
+              </div>
         </div>
 
         <div class="sidebar-pane" id="wylesienie">
             <h1 class="sidebar-header">Wylesienie<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <div class="item">
+                <div class="toggle-rect-color">
+                  <input type="checkbox" class = "checkbox_granica" id="check_2" name="check">
+                  <label for="check_2"></label>
+                  <label id = "checkbox-text" for="check_2">Granica Borów Tucholskich</label>
+                </div>
+              </div>
         </div>
 
         <div class="sidebar-pane" id="przyrost">
             <h1 class="sidebar-header">Przyrost<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <div class="item">
+                <div class="toggle-rect-color">
+                  <input type="checkbox" class = "checkbox_granica" id="check_3" name="check">
+                  <label for="check_3"></label>
+                  <label id = "checkbox-text" for="check_3">Granica Borów Tucholskich</label>
+                </div>
+              </div>
         </div>
 
         <div class="sidebar-pane" id="tornado">
