prawidłowe podłączenie warstw

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul role="tablist">
             <li><a class = "ikona_tab" href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
             <li id = "warstwa_dane" class = "ikona_tab" ><a  href="#dane" role="tab"><img class = "ikonka" src="png/statistic.png" width = "25px" height = "25px"></img></a></li>
-            <li id = "warstwa_granice" class = "ikona_tab" ><a  href="#granice" role="tab"><img class = "ikonka" src="png/forest-map.png" width = "25px" height = "25px"></img></a></li>
+            <!--<li id = "warstwa_granice" class = "ikona_tab" ><a  href="#granice" role="tab"><img class = "ikonka" src="png/forest-map.png" width = "25px" height = "25px"></img></a></li>-->
             <li id = "warstwa_pokrycie" class = "ikona_tab"><a href="#pokrycie" role="tab"><img class = "ikonka" src="png/nature.png" width = "25px" height = "25px"></img></a></li>
             <li id = "warstwa_wylesienie" class = "ikona_tab"><a href="#wylesienie" role="tab"><img class = "ikonka" src="png/005-deforestation-3.png" width = "25px" height = "25px"></img></a></li>
             <!--<li class="disabled"><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>-->
