--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <div id = "title">Analiza wylesienia Borów Tucholskich w latach 2001-2020</div> 
 
-    <div class="container">
+    <div id = "slider-container" class="container">
         
       <div class="range-slider">
         <span id="rs-bullet" class="rs-label">2000</span>
@@ -139,7 +139,7 @@
       
       </div> 
 
-
+    </div>
     <script src="script.js"></script>
     <script src="L.TileLayer.BetterWMS.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
