--- a/index.html
+++ b/index.html
@@ -92,7 +92,12 @@
                   <label for="check_2"></label>
                   <label id = "checkbox-text" for="check_2">Granica Borów Tucholskich</label>
                 </div>
-              </div>
+            </div>
+            <p id = "wylesienie_statystyki">
+              <b>Łączna powierzchnia: </b> 0.87 km </br></br>
+              <b>Rok 2010: </b> 760 km
+            </p>
+            
         </div>
 
         <div class="sidebar-pane" id="przyrost">
