--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset = "utf-8"/>
     <meta name = "viewport" content="width=device-width, initial-scale=0.6">
-    <meta name = "description" content = "O tej porze kazdy wypic moze"/>
-    <meta name = "keywords" content = "jakby, nie było, jest bardzo, miło"/>
+    <meta name = "description" content = "Interaktywna mapa analizy zmian deforestacji Borów Tucholskich w latach 2001-2020"/>
+    <meta name = "keywords" content = "Sekcja Geoinformacji, UAM, Geoinformacja, Bory Tucholskie, deforestacja"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>Analiza wylesienia Borów Tucholskich</title>
+    <title>Deforestacja Borów Tucholskich</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,21 +14,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="gmaps-sidebar.css" />
+    <link rel="stylesheet" href="css/gmaps-sidebar.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
     integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
     crossorigin=""/>
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
+   
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
     crossorigin=""></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
-    <!--<script src="geojson/lossyear.geojson" type="text/javascript" ></script>-->
-    <script src="geojson/gain.geojson" type="text/javascript" ></script>
 </head>
 <body>
   <div id="sidebar" class="sidebar collapsed">
@@ -94,7 +92,7 @@
                 </div>
             </div>
             <p id = "wylesienie_statystyki">
-              <b>Łączna powierzchnia: </b> 0.87 km </br></br>
+              <b>Łącznie od 2000 roku: </b> 0.87 km </br></br>
               <b>Rok 2010: </b> 760 km
             </p>
             
@@ -145,11 +143,11 @@
       </div> 
 
     </div>
-    <script src="script.js"></script>
-    <script src="L.TileLayer.BetterWMS.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/L.TileLayer.BetterWMS.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="jquery-sidebar.js"></script>
-    <script src="leaflet-sidebar.js"></script>
+    <script src="js/jquery-sidebar.js"></script>
+    <script src="js/leaflet-sidebar.js"></script>
     <script>
 
     var sidebar = $('#sidebar').sidebar();
