--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             <!--<li class="disabled"><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>-->
             <li id = "warstwa_przyrost" class = "ikona_tab"><a  href="#przyrost" role="tab"><img class = "ikonka" src="png/009-replant.png" width = "25px" height = "25px"></img></a></li>
             <li id = "warstwa_tornado" class = "ikona_tab"><a  href="#tornado" role="tab"><img class = "ikonka" src="png/007-cold.png"  width = "25px" height = "25px"></img></a></li>
+
         </ul>
 
         <ul role="tablist">
+            <li><a href="#warstwy" role="tab"><img class = "ikonka" src="png/layers.png" width = "25px" height = "25px"></img></a></src><i class="fa fa-gear"></i></a></li>
             <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
         </ul>
     </div>
@@ -79,6 +81,9 @@
                   <label for="check_1"></label>
                   <label id = "checkbox-text" for="check_1">Granica Borów Tucholskich</label>
                 </div>
+                <div class="guzik">2000</div>
+                <div class="guzik">2010</div>
+                <div class="guzik2">zmiana pokrycia</div>
               </div>
         </div>
 
@@ -115,6 +120,10 @@
 
         <div class="sidebar-pane" id="messages">
             <h1 class="sidebar-header">Messages<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+        </div>
+
+        <div class="sidebar-pane" id="warstwy">
+            <h1 class="sidebar-header">warstwy<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
         </div>
 
         <div class="sidebar-pane" id="settings">
