podłączenie warstw przycisków i map bazowych

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                   <label for="check_1"></label>
                   <label id = "checkbox-text" for="check_1">Granica Borów Tucholskich</label>
                 </div>
-                <div class="guzik">2000</div>
-                <div class="guzik">2010</div>
-                <div class="guzik2">zmiana pokrycia</div>
+                <div id = "guzik_1" class="guzik">2000</div>
+                <div id = "guzik_2" class="guzik">2010</div>
+                <div style = "border-bottom:none" id = "guzik_3" class="guzik">zmiana pokrycia</div>
               </div>
         </div>
 
