--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                   <label for="check_2"></label>
                   <label id = "checkbox-text" for="check_2">Granica Borów Tucholskich</label>
                 </div>
+
+                <div id = "suwak">
+                  <h4> Nieprzeźroczystość: <span  id = "imageopacity">100%</span></h4>
+                  <input type = "range" id = "opacity-slider" min = '0', max = '100', value = '100', step = '1' onchange="imageopacity.value = value">
+                </div>	
             </div>
             <p id = "wylesienie_statystyki">
               <b>Łącznie od 2000 roku: </b> 0.87 km </br></br>
