poprawa opacity range

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <div id = "suwak">
                   <h4> Nieprzeźroczystość: <span  id = "imageopacity">100%</span></h4>
-                  <input type = "range" id = "opacity-slider" min = '0', max = '100', value = '100', step = '1' onchange="imageopacity.value = value">
+                  <input type = "range" id = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
                 </div>	
             </div>
             <p id = "wylesienie_statystyki">
