--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                   <label for="check_1"></label>
                   <label id = "checkbox-text" for="check_1">Granica Borów Tucholskich</label>
                 </div>
+
+                <div class = "suwak">
+                  <p> Nieprzeźroczystość: <span id = "imageopacity_1" class = "imageopacity">100%</span></p>
+                  <input type = "range" id = "opacity_slider_1" class = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
+                </div>
+
                 <div id = "guzik_1" class="guzik">2000</div>
                 <div id = "guzik_2" class="guzik">2010</div>
                 <div style = "border-bottom:none" id = "guzik_3" class="guzik">zmiana pokrycia</div>
@@ -93,9 +99,9 @@
                   <label id = "checkbox-text" for="check_2">Granica Borów Tucholskich</label>
                 </div>
 
-                <div id = "suwak">
-                  <h4> Nieprzeźroczystość: <span  id = "imageopacity">100%</span></h4>
-                  <input type = "range" id = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
+                <div class = "suwak">
+                  <p> Nieprzeźroczystość: <span  id = "imageopacity_2" class = "imageopacity">100%</span></p>
+                  <input type = "range" id = "opacity_slider_2" class = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
                 </div>	
             </div>
             <p id = "wylesienie_statystyki">
@@ -112,6 +118,11 @@
                   <input type="checkbox" class = "checkbox_granica" id="check_3" name="check">
                   <label for="check_3"></label>
                   <label id = "checkbox-text" for="check_3">Granica Borów Tucholskich</label>
+                </div>
+
+                <div class = "suwak">
+                  <p> Nieprzeźroczystość: <span  id = "imageopacity_3" class = "imageopacity">100%</span></p>
+                  <input type = "range" id = "opacity_slider_3" class = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
                 </div>
               </div>
         </div>
