--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
         <div class="sidebar-pane" id="pokrycie">
             <h1 class="sidebar-header">Pokrycie<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <p class="lorem">Warstwa pokrycia przedstawia zmianę gęstości zadrzewienia pomiędzy rokiem 2000 i 2010  </p>
             <div class="item">
                 <div class="toggle-rect-color">
                   <input type="checkbox"  class = "checkbox_granica" id="check_1" name="check">
@@ -92,6 +93,7 @@
 
         <div class="sidebar-pane" id="wylesienie">
             <h1 class="sidebar-header">Wylesienie<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <p class="lorem">Warstwa przedstawia według podziału na poszczególne lata ubytek drzew na terenie Borów Tucholskich. W celu zwizualizowania następujących zmian wykorzystano suwak.  </p>
             <div class="item">
                 <div class="toggle-rect-color">
                   <input type="checkbox" class = "checkbox_granica" id="check_2" name="check">
@@ -113,12 +115,13 @@
 
         <div class="sidebar-pane" id="przyrost">
             <h1 class="sidebar-header">Przyrost<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <p class="lorem">Warstwa przyrostu wizualizuje nasadzenia powstałe w latach 2000-2012 </p>
             <div class="item">
                 <div class="toggle-rect-color">
                   <input type="checkbox" class = "checkbox_granica" id="check_3" name="check">
                   <label for="check_3"></label>
                   <label id = "checkbox-text" for="check_3">Granica Borów Tucholskich</label>
-                </div>
+                  </div>
 
                 <div class = "suwak">
                   <p> Nieprzeźroczystość: <span  id = "imageopacity_3" class = "imageopacity">100%</span></p>
