zaktualizowanie suwaka wylesienia

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 </div>	
             </div>
             <p id = "wylesienie_statystyki">
-              <b>Łącznie od 2000 roku: </b> 0.87 km </br></br>
-              <b>Rok 2010: </b> 760 km
+              <b>Łącznie od 2000 roku: </b>10 796,84 ha </br></br>
+              <b>Rok 2010: </b> 1831,46 ha
             </p>
             
         </div>
