dodanie danych o borach tuchoslkich

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 
         <div class="sidebar-pane" id="dane">
             <h1 class="sidebar-header">Dane nadleśnictw<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <p class="lorem">
+              Dane ogólne dla Borów Tucholskich:</br></br>
+            <b>Powierzchnia wycinek: </b>49 859,63 ha</br>
+            <b>Powierzchnia nadleśnictwa: </b>322 952,86 ha</br>
+            <b>% pokrycia: </b>65,5%</br>
+            <b>% straty: </b>15,4%</br>
+            <b>% przyrostu: </b>3%</br>
+            </p>
         </div>
         
         <div class="sidebar-pane" id="granice">
