--- a/index.html
+++ b/index.html
@@ -88,14 +88,19 @@
                   <label id = "checkbox-text" for="check_1">Granica Borów Tucholskich</label>
                 </div>
 
+               <!-- <div class = "suwak">
+                  <p> Nieprzeźroczystość: <span id = "imageopacity_1" class = "imageopacity">100%</span></p>
+                  <input type = "range" id = "opacity_slider_1" class = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
+                </div>-->
+
+                <div  id = "guzik_1"  class="guzik">2000</div>
+                <div  id = "guzik_2" class="guzik">2010</div>
+                <div  id = "guzik_3" class="guzik">zmiana pokrycia</div>
+
                 <div class = "suwak">
                   <p> Nieprzeźroczystość: <span id = "imageopacity_1" class = "imageopacity">100%</span></p>
                   <input type = "range" id = "opacity_slider_1" class = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
                 </div>
-
-                <div id = "guzik_1" class="guzik">2000</div>
-                <div id = "guzik_2" class="guzik">2010</div>
-                <div style = "border-bottom:none" id = "guzik_3" class="guzik">zmiana pokrycia</div>
               </div>
         </div>
 
