--- a/index.html
+++ b/index.html
@@ -67,24 +67,32 @@
               <b>Dane ogólne dla Borów Tucholskich:</b></br></br>
               <div><table>
                 <tr>
-                  <td><b>Powierzchnia wycinek:</b></td>
-                  <td>49 859,63 ha</td>
-                </tr>
-                <tr>
-                  <td><b>Powierzchnia nadleśnictwa:</b></td>
+                  <td><b>Powierzchnia nadleśnictwa: </b></td>
                   <td>322 952,86 ha</td>
                 </tr>
                 <tr>
-                  <td><b>% pokrycia:</b></td>
+                  <td><b>% pokrycia w 2000 r.: </b></td>
                   <td>65,5%</td>
                 </tr>
                 <tr>
-                  <td><b>% straty:</b></td>
+                  <td><b>Powierzchnia pokrycia w 2000 r: </b></td>
+                  <td>211 641,6 ha</td>
+                </tr>
+                <tr>
+                  <td><b>% straty: </b></td>
                   <td>15,4%</td>
                 </tr>
                 <tr>
-                  <td><b>% przyrostu:</b></td>
+                  <td><b>Powierzchnia strat: </b></td>
+                  <td>49 859,63 ha</td>
+                </tr>
+                <tr>
+                  <td><b>% przyrostu: </b></td>
                   <td>3%</td>
+                </tr>
+                <tr>
+                  <td><b>Powierzchnia nasadzeń: </b></td>
+                  <td>9640,89 ha</td>
                 </tr>
               </table></div>
             </p>
