zmiana cienia logo sekcji

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="sidebar-pane" id="autorzy">
             <h1 class="sidebar-header">Autorzy<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
         <div>
-          <a href="https://sekcjageoinformacji.amu.edu.pl/" target="_blank"><img class="logo" src = "png/logo3.png" width="180px" height="200px"></a>
+          <a href="https://sekcjageoinformacji.amu.edu.pl/" target="_blank"><img id="logo" src = "png/logo3.png" width="180px" height="200px"></a>
         </div>
         </div>
     </div>
