--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
     integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
     crossorigin=""/>
-   
+
     <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
     crossorigin=""></script>
@@ -211,9 +211,28 @@
 
         <div class="sidebar-pane" id="autorzy">
             <h1 class="sidebar-header">Autorzy<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-        <div>
+        <div id = "logo_div">
           <a href="https://sekcjageoinformacji.amu.edu.pl/" target="_blank"><img id="logo" src = "png/logo3.png" width="180px" height="200px"></a>
+          <span>sekcja.geoinformacji.skng@gmail.com</span>
         </div>
+
+        <div id = "media">
+          <a href="https://www.facebook.com/SekcjaGeoinformacjiUam/" id="link" target = "_blank">
+            <span id = "ig">
+              <img id = "logo_ig" src = "png/facebook_color.png" width = 45px height = 45px style="margin-top:40px; margin-bottom:20px;">
+            </span>
+          </a>
+          <a href="https://www.instagram.com/sekcja_geoinformacji_uam/" id="link" target = "_blank">
+            <span id = "ig">
+              <img id = "logo_ig" src = "png/instagram_color.png" width = 45px height = 45px style="margin-top:40px; margin-bottom:20px;">
+            </span>
+          </a>
+          <a href="https://github.com/sekcja-geoinformacji-uam/" id="git_link" target = "_blank">
+            <span id = "ig">
+              <img id = "logo_ig" src = "png/github-sign.png" width = 45px height = 45px style="margin-top:40px; margin-bottom:20px;">
+            </span>
+          </a>
+      </div>
         </div>
     </div>
 </div>
