--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
+
+    <!--warstwy wichur-->
+    <script src="poligony/geojson/traba_powietrzna_2012.geojson"></script>
+    <script src="poligony/geojson/traba_powietrzna_2017.geojson"></script>
 </head>
 <body>
   <div id="sidebar" class="sidebar collapsed">
