--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.11/d3.min.js"></script>
 
     <!--warstwy wichur-->
-    <script src="poligony/geojson/traba_powietrzna_2012.json"></script>
-    <script src="poligony/geojson/traba_powietrzna_2017.json"></script>
+    <script src="poligony/geojson/traba_powietrzna_2012.js"></script>
+    <script src="poligony/geojson/traba_powietrzna_2017.js"></script>
 </head>
 <body>
   <div id="sidebar" class="sidebar collapsed">
