dodanie buttona nadlesnictw

--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
                   <label id = "checkbox-text" for="check_1">Granica Borów Tucholskich</label>
                 </div>
 
+                <div class="toggle-rect-color">
+                  <input type="checkbox"  class = "checkbox_nadlesnictwa" id="check_nadlesnictwo_1" name="check">
+                  <label for="check_nadlesnictwo_1"></label>
+                  <label id = "checkbox-text" for="check_nadlesnictwo_1">Nadleśnictwa</label>
+                </div>
+
                <div class = "suwak">
                   <p> Nieprzeźroczystość: <span id = "imageopacity_1" class = "imageopacity">100%</span></p>
                   <input type = "range" id = "opacity_slider_1" class = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
@@ -135,6 +141,12 @@
                   <input type="checkbox" class = "checkbox_granica" id="check_2" name="check">
                   <label for="check_2"></label>
                   <label id = "checkbox-text" for="check_2">Granica Borów Tucholskich</label>
+                </div>
+
+                <div class="toggle-rect-color">
+                  <input type="checkbox"  class = "checkbox_nadlesnictwa" id="check_nadlesnictwo_2" name="check">
+                  <label for="check_nadlesnictwo_2"></label>
+                  <label id = "checkbox-text" for="check_nadlesnictwo_2">Nadleśnictwa</label>
                 </div>
 
                 <div class = "suwak">
@@ -170,6 +182,12 @@
                   <label id = "checkbox-text" for="check_3">Granica Borów Tucholskich</label>
                   </div>
 
+                  <div class="toggle-rect-color">
+                    <input type="checkbox"  class = "checkbox_nadlesnictwa" id="check_nadlesnictwo_3" name="check">
+                    <label for="check_nadlesnictwo_3"></label>
+                    <label id = "checkbox-text" for="check_nadlesnictwo_3">Nadleśnictwa</label>
+                  </div>
+
                 <div class = "suwak">
                   <p> Nieprzeźroczystość: <span  id = "imageopacity_3" class = "imageopacity">100%</span></p>
                   <input type = "range" id = "opacity_slider_3" class = "opacity-slider" min = '0', max = '100', value = '100', step = '1'>
@@ -179,6 +197,21 @@
 
         <div class="sidebar-pane" id="tornado">
             <h1 class="sidebar-header">Efekt Tornada<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
+            <p class="lorem">Warstwa przedstawia obszary utracone przez trąby powietrzne w 2012 i 2017 roku</p>
+            <div class="item">
+              <div class="toggle-rect-color">
+                <input type="checkbox"  class = "checkbox_granica" id="check_4" name="check">
+                <label for="check_4"></label>
+                <label id = "checkbox-text" for="check_4">Granica Borów Tucholskich</label>
+              </div>
+
+              <div class="toggle-rect-color">
+                <input type="checkbox"  class = "checkbox_nadlesnictwa" id="check_nadlesnictwo_4" name="check">
+                <label for="check_nadlesnictwo_4"></label>
+                <label id = "checkbox-text" for="check_nadlesnictwo_4">Nadleśnictwa</label>
+              </div>
+
+            </div>
         </div>
 
         <div class="sidebar-pane" id="messages">
