zaktualizowanie suwaka z danymi wycinek

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             </div>
             <p id = "wylesienie_statystyki">
               <div>
-                <table>
+                <table id = "wylesienie_stats">
                   <tr id="wylesienie_tabela">
                     <td><b>Łącznie od 2000 roku: </b></td>
                     <td>10 796,84 ha</td>
