dodanie lupy ale zajawka

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/leaflet.magnifyingglass.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/gmaps-sidebar.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
@@ -293,15 +294,19 @@
       </div> 
 
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/leaflet.magnifyingglass.js"></script>
+</body>
+
+<script src="js/script.js"></script>
     <script src="js/L.TileLayer.BetterWMS.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/jquery-sidebar.js"></script>
     <script src="js/leaflet-sidebar.js"></script>
+    
     <script>
 
     var sidebar = $('#sidebar').sidebar();
 
-    </script>
-</body>
+
+</script>
 </html>
