dorobienie funkcji zmiennej ploss

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   <td><b>Powierzchnia pokrycia w 2000 r: </b></td>
                   <td>211 641,6 ha</td>
                 </tr>
-                <tr>
+                <tr id = "strata_stats" >
                   <td><b>% straty: </b></td>
                   <td>15,4%</td>
                 </tr>
