dorobienie kolejnych legend zmiennych

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <td><b>Powierzchnia strat: </b></td>
                   <td>49 859,63 ha</td>
                 </tr>
-                <tr>
+                <tr id = "przyrost_stats" >
                   <td><b>% przyrostu: </b></td>
                   <td>3%</td>
                 </tr>
