dodanie dwoch legend

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <p class="lorem">
               <b>Dane ogólne dla Borów Tucholskich:</b></br></br>
               <div><table>
-                <tr>
+                <tr id = "powierzchnia_stats">
                   <td><b>Powierzchnia nadleśnictwa: </b></td>
                   <td>322 952,86 ha</td>
                 </tr>
-                <tr>
+                <tr id = "przykrycie_2000_stats">
                   <td><b>% pokrycia w 2000 r.: </b></td>
                   <td>65,5%</td>
                 </tr>
@@ -82,7 +82,7 @@
                   <td><b>Powierzchnia pokrycia w 2000 r: </b></td>
                   <td>211 641,6 ha</td>
                 </tr>
-                <tr id = "strata_stats" >
+                <tr id = "strata_stats">
                   <td><b>% straty: </b></td>
                   <td>15,4%</td>
                 </tr>
