--- a/index.html
+++ b/index.html
@@ -62,7 +62,20 @@
                 <span class="sidebar-close"><i class="fa fa-caret-right"></i></span>
             </h1>
 
-              <p class="lorem">opis</p>
+              <p class="lorem">Do wykonania projektu wykorzystaliśmy dane z analizy szeregów czasowych zdjęć 
+                satelitarnych globalnego zasięgu lasów i zmian od 2000 do 2020 roku. Baza danych stworzona została 
+                przez zespół naukowców z Uniwersytetu w Maryland. Bazę wykonali na podstawie zdjęć satelitarnych z 
+                satelity Landsat 7. Dane zawierają 8-bitowe wartości o rozdzielczości przestrzennej jednej sekundy 
+                kątowej lub około 30 metrów na piksel (na równiku).  
+                <br>
+                </br>
+                Do wykonania projektu użyliśmy również danych z projeku Corine Land Cover stworzonego przez Europejską 
+                Agencję Środowiska (EEA). Istotą programu CLC jest dostarczenie aktualnej informacji dotyczącej pokrycia terenu. 
+                <br>
+                </br>
+                W warstwie pokrycia terenu przez drzewa w 2000 roku każda komórka rastra miała przypisaną wartość o powierzchniowym 
+                procencie zalesienia. Do wykonania analizy wykorzystaliśmy jedynie komórki rastra, które miały zalesione powyżej 25% 
+                powierzchni, (aby zredukować ilość komórek o małej istotności, a które mogły błędnie wpłynąć na końcowy wynik analizy).  </p>
         </div>
 
         <div class="sidebar-pane" id="dane">
