--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 
         <div class="sidebar-pane" id="pokrycie">
             <h1 class="sidebar-header">Pokrycie<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-            <p class="lorem">Warstwa pokrycia przedstawia zmianę gęstości zadrzewienia pomiędzy rokiem 2000 i 2010  </p>
+            <p class="lorem">Warstwa przedstawiająca procentową zmianę zadrzewienia danych komórek rastra (pikseli) 
+                             między rokiem 2000 i 2010:  </p>
             <div class="item">
                 <div class="toggle-rect-color">
                   <input type="checkbox"  class = "checkbox_granica" id="check_1" name="check">
@@ -149,7 +150,10 @@
 
         <div class="sidebar-pane" id="wylesienie">
             <h1 class="sidebar-header">Wylesienie<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-            <p class="lorem">Warstwa przedstawia według podziału na poszczególne lata ubytek drzew na terenie Borów Tucholskich. W celu zwizualizowania następujących zmian wykorzystano suwak.  </p>
+            <p class="lorem">Warstwa przedstawia ubytek drzew na terenie Borów Tucholskich według podziału na poszczególne lata. 
+                             Warstwa źródłowa, która słuzyła za podstawę do wykonania wizualizacji, składała się z komórek rastra 
+                             i przypisanych do nich wartości 0d 1 do 20. Wartości te oznaczały rok wylesienia danej komórki rastra.
+                              </p>
             <div class="item">
                 <div class="toggle-rect-color">
                   <input type="checkbox" class = "checkbox_granica" id="check_2" name="check">
@@ -188,7 +192,8 @@
 
         <div class="sidebar-pane" id="przyrost">
             <h1 class="sidebar-header">Przyrost<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-            <p class="lorem">Warstwa przyrostu wizualizuje nasadzenia powstałe w latach 2000-2012 </p>
+            <p class="lorem">Warstwa przyrostu zadrzewienia. Przedstawia komórki rastra (piksele), w których zasadzono nowe drzewa. 
+                             Warstwa obejmuję zasięg czasowy od 2000 do 2012 roku, ze względu na brak dostępności bardziej aktualnych danych. </p>
             <div class="item">
                 <div class="toggle-rect-color">
                   <input type="checkbox" class = "checkbox_granica" id="check_3" name="check">
@@ -211,7 +216,9 @@
 
         <div class="sidebar-pane" id="tornado">
             <h1 class="sidebar-header">Efekt Tornada<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
-            <p class="lorem">Warstwa przedstawia obszary utracone przez trąby powietrzne w 2012 i 2017 roku</p>
+            <p class="lorem">Warstwa przedstawiająca obszary lasów zniszczone w wyniku przejścia trąb powietrznych w 2012 i 2017 roku.
+                             Warstwa została wykonana w sposób subiektywny.
+            </p>
             <div class="item">
               <div class="toggle-rect-color">
                 <input type="checkbox"  class = "checkbox_granica" id="check_4" name="check">
