--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <h1 class="sidebar-header">Wylesienie<span class="sidebar-close"><i class="fa fa-caret-right"></i></span></h1>
             <p class="lorem">Warstwa przedstawia ubytek drzew na terenie Borów Tucholskich według podziału na poszczególne lata. 
                              Warstwa źródłowa, która słuzyła za podstawę do wykonania wizualizacji, składała się z komórek rastra (pikseli) 
-                             i przypisanych do nich wartości 0d 1 do 20. Wartości te oznaczały rok wylesienia danej komórki rastra.
+                             i przypisanych do nich wartości od 1 do 20. Wartości te oznaczały rok wylesienia danej komórki rastra.
                               </p>
             <div class="item">
                 <div class="toggle-rect-color">
