dodanie p_cover dla nadlesnictw i borów

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
                   <td><b>Powierzchnia pokrycia w 2000 r: </b></td>
                   <td>211 641,6 ha</td>
                 </tr>
+                <tr class = "stats" id = "przykrycie_2010_stats">
+                  <td><b>% pokrycia w 2010 r.: </b></td>
+                  <td>64,9%</td>
+                </tr>
+                <tr>
+                  <td><b>Powierzchnia pokrycia w 2010 r: </b></td>
+                  <td>209 905,7 ha</td>
+                </tr>
                 <tr class = "stats" id = "strata_stats">
                   <td><b>% straty: </b></td>
                   <td>15,4%</td>
